@@ -16,9 +16,10 @@ import io.swagger.v3.oas.models.security.SecurityRequirement;
 import io.swagger.v3.oas.models.security.SecurityScheme;
 import io.swagger.v3.oas.models.security.SecurityScheme.In;
 import io.swagger.v3.oas.models.security.SecurityScheme.Type;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+
+import java.util.*;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 class SwaggerDocService extends AllDirectives {
 
@@ -30,7 +31,8 @@ class SwaggerDocService extends AllDirectives {
 
     @Override
     public Set<Class<?>> apiClasses() {
-      return Set.of(GroupRouter.class, UserRouter.class, AdminRoutes.class);
+      return Stream.of(GroupRouter.class, UserRouter.class, AdminRoutes.class)
+              .collect(Collectors.toCollection(HashSet::new));
     }
 
     @Override
@@ -45,7 +47,7 @@ class SwaggerDocService extends AllDirectives {
 
     @Override
     public io.swagger.v3.oas.models.info.Info info() {
-      var info = new Info();
+      Info info = new Info();
       info.setTitle("Customer model sync service");
       info.setVersion("v1");
       return info;
@@ -53,31 +55,31 @@ class SwaggerDocService extends AllDirectives {
 
     @Override
     public List<String> schemes() {
-      return List.of("https", "http");
+      return Arrays.asList("https", "http");
     }
 
     @Override
     public List<SecurityRequirement> security() {
-      var securityRequirement = new SecurityRequirement();
+      SecurityRequirement securityRequirement = new SecurityRequirement();
       securityRequirement.addList("bearer-jwt");
-      return List.of(securityRequirement);
+      return Collections.singletonList(securityRequirement);
     }
 
     @Override
     public Map<String, SecurityScheme> securitySchemes() {
-      var securityScheme = new SecurityScheme();
+      SecurityScheme securityScheme = new SecurityScheme();
       securityScheme.setType(Type.HTTP);
       securityScheme.setScheme("bearer");
       securityScheme.setBearerFormat("JWT");
       securityScheme.setIn(In.HEADER);
       securityScheme.setName("Authorization");
-      return Map.of("bearer-jwt", securityScheme);
+      return Collections.singletonMap("bearer-jwt", securityScheme);
     }
   };
 
   Route createRoute() {
-    final Route route = route(path(PathMatchers.segment(generator.apiDocsPath()).slash("swagger.json"),
-            () -> get(() -> complete(generator.generateSwaggerJson()))));
+    final Route route = path(PathMatchers.segment(generator.apiDocsPath()).slash("swagger.json"),
+            () -> get(() -> complete(generator.generateSwaggerJson())));
 
     final CorsSettings settings = CorsSettings.defaultSettings();
     return cors(settings, () -> route);
